homework5/NOTE
Pulling https://github.com/MairianeT/IS-2020-prog-2-sem/homework5
Pull finished
main.cpp: In function 'int main()':
main.cpp:203:32: error: no matching function for call to 'CircularBuffer<std::__cxx11::basic_string<char> >::CircularBuffer(int)'
  203 |     CircularBuffer<string> cs(4);
      |                                ^
In file included from main.cpp:10:
CircularBuffer.hpp:131:14: note: candidate: 'CircularBuffer<T>::CircularBuffer(T) [with T = std::__cxx11::basic_string<char>]'
  131 |     explicit CircularBuffer (T value) {
      |              ^~~~~~~~~~~~~~
CircularBuffer.hpp:131:32: note:   no known conversion for argument 1 from 'int' to 'std::__cxx11::basic_string<char>'
  131 |     explicit CircularBuffer (T value) {
      |                              ~~^~~~~
CircularBuffer.hpp:6:7: note: candidate: 'constexpr CircularBuffer<std::__cxx11::basic_string<char> >::CircularBuffer(const CircularBuffer<std::__cxx11::basic_string<char> >&)'
    6 | class CircularBuffer {
      |       ^~~~~~~~~~~~~~
CircularBuffer.hpp:6:7: note:   no known conversion for argument 1 from 'int' to 'const CircularBuffer<std::__cxx11::basic_string<char> >&'
CircularBuffer.hpp:6:7: note: candidate: 'constexpr CircularBuffer<std::__cxx11::basic_string<char> >::CircularBuffer(CircularBuffer<std::__cxx11::basic_string<char> >&&)'
CircularBuffer.hpp:6:7: note:   no known conversion for argument 1 from 'int' to 'CircularBuffer<std::__cxx11::basic_string<char> >&&'
make: *** [makefile:2: all] Error 1



